--- a/static/css/hyde.css
+++ b/static/css/hyde.css
@@ -168,6 +168,7 @@ a.sidebar-nav-item.active:focus {
 
 @media (min-width: 64em) {
   .content {
+    max-width: 100%;
     margin-left: 22rem;
     margin-right: 4rem;
   }
