--- a/static/css/hyde.css
+++ b/static/css/hyde.css
@@ -32,7 +32,7 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Noto Sans CJK TC", "PingFang TC", "Microsoft YaHei", "Microsoft JhengHei", "PT Sans", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   html {
@@ -80,7 +80,6 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: sans-serif;
   font-size: 2.4rem;
 }
 
