--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<div class="posts">
+	<div class="posts article-list">
 		{% for article in articles_page.object_list %}
 			<div class="post">
 				<h1 class="post-title">
